--- a/Api2/vercel.json
+++ b/Api2/vercel.json
@@ -1,1 +1,20 @@
 
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api2/api_filmes.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.11"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api2/api_filmes.py"
+    }
+  ]
+}
